# My_Slicer

./: .gitignore  README.md
STL_DATA/: arc_test1_r34.stl  r30_yz_pipe.stl  test_wheel.stl
Slicer/: CMakeLists.txt  main.cpp  r25_pipe.stl
Slicer/stl_read/: stl_read.h
Slicer_2D/: CMakeLists.txt  main.cpp
Slicer_2D/stl_read/: stl_read.h
Slicer_arc/: main.cpp  r30_yz_pipe_50rad.stl
Slicer_v2/: main.cpp
Slicer_v2_arc/: arc_test1_r35.stl  main.cpp
Slicer_withQt/: CMakeLists.txt  README.md  SOrbitCameraController.qml  Slicer.cpp  Slicer.h  SlicerMeshScene.qml  SlicerPathScene.qml  Slicing.cpp  Slicing.h  TestMaterial.qml  TransformGizmo.qml  main.cpp  main.qml  qml.qrc  slice_data.h  testvertexcolor.frag  testvertexcolor.vert
Test_Clipper/OffsetPath/: main.cpp
Test_Clipper/Polygon_view/: CMakeLists.txt  main.cpp
Test_Clipper/Zigzag/: main.cpp
Test_Clipper/test1/: CMakeLists.txt  main.cpp
Test_Clipper/test2/: CMakeLists.txt  main.cpp
slicer/: CMakeLists.txt  main.cpp  slice_data.h
slicer_2D/stl_read/: CMakeLists.txt  stl_read.cpp
stl_read/: CMakeLists.txt  stl_read.cpp
